--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
 <!-- partial:index.partial.html -->
 <div id="banner">
-  <img id="logo" src="https://s3-us-west-1.amazonaws.com/frish/PILMiVp.png"/>
+<!--   <img id="logo" src="https://s3-us-west-1.amazonaws.com/frish/PILMiVp.png"/> -->
   <img id="photo" src="https://s3-us-west-1.amazonaws.com/frish/I0Ocv77.png"/>
-  <h2 id="hed">#noregrets</h2>
-  <h2 id="txt1">#nofilter</h2>
-  <h1 id="txt2">#savemoney</h1>
-  <h3 id="cta"><em>Free Rate Quote</em></h3>
+  <h2 id="hed">#MilkPowder</h2>
+  <h2 id="txt1">#CoffeePowder</h2>
+  <h1 id="txt2">#Spoon</h1>
+  <h3 id="cta"><em>CHLO COFFEE PINE....!</em></h3>
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
