--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Web Banner Animation GSAP Animation</title>
+  <title>mESSAGE</title>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,900" rel="stylesheet"><link rel="stylesheet" href="./style.css">
 
 </head>
