--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <!-- partial:index.partial.html -->
 <div id="banner">
 <!--   <img id="logo" src="https://s3-us-west-1.amazonaws.com/frish/PILMiVp.png"/> -->
-  <img id="photo" src="https://s3-us-west-1.amazonaws.com/frish/I0Ocv77.png"/>
-  <h2 id="hed">#MilkPowder</h2>
-  <h2 id="txt1">#CoffeePowder</h2>
-  <h1 id="txt2">#Spoon</h1>
-  <h3 id="cta"><em>CHLO COFFEE PINE....!</em></h3>
+  <img id="photo" src="https://pngimg.com/d/girls_PNG6491.png"/>
+  <h2 id="hed">#Nature</h2>
+  <h2 id="txt1">#BeautifulGirls</h2>
+  <h1 id="txt2">#Sukoon</h1>
+  <h3 id="cta"><em>CHLO MAAL DEKHNE....!</em></h3>
 </div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
